# SimpleHttpServerBoostAsio

./: CMakeLists.txt  makefile
Client/: CMakeLists.txt
Client/include/CustomClient/: ClientState.hpp  Request.hpp  RequestSender.hpp  ResponseParser.hpp
Client/src/: ClientState.cpp  Request.cpp  RequestSender.cpp  ResponseParser.cpp  main.cpp
Http/: CMakeLists.txt
Http/include/Http/: HttpRequest.hpp  HttpResponse.hpp  Types.hpp
Http/src/: HttpRequest.cpp  HttpResponse.cpp  Types.cpp
Server/: CMakeLists.txt
Server/include/CustomServer/: Connection.hpp  HttpRequestConnection.hpp  RequestHandler.hpp  RequestParser.hpp  Server.hpp  ServerState.hpp
Server/src/: Connection.cpp  HttpRequestConnection.cpp  RequestHandler.cpp  RequestParser.cpp  Server.cpp  ServerState.cpp  main.cpp
